# Vibro

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.web  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.https.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-web.txt  requirements.txt  setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: backup-server.yml  ci.yml  deploy.yml  release.yml  server-deploy.yml
docs/: operations.md  server-deploy.md
infra/: Caddyfile
python/: calibration.py  config.py  converter.py  datasets.py  explain.py  export_model.py  export_onnx.py  features.py  generate_data.py  generate_rul_data.py  load_seu.py  models_nn.py  train.py  train_autoencoder.py  train_cnn.py  train_lstm.py  train_optimal.py  train_rul.py
python/backend/: __init__.py  config.py  db.py  main.py  models.py  schemas.py  security.py
python/data/: PUT_SEU_FILES_HERE.txt
python/models/: meta.json
scripts/: backup_database.sh  backup_runtime.sh  deploy_server.sh  restore_database_backup.sh  restore_runtime_backup.sh  rollback_release.sh
tests/: conftest.py  test_advanced_ml.py  test_backend_api.py  test_config.py  test_converter.py  test_datasets.py  test_features.py  test_load_seu.py  test_models_nn.py  test_pipeline.py  test_train_optimal.py
web/: index.html  simulator.html
web/css/: style.css
web/js/: app.js  config.js  converter.js  features.js  fft.js  model.js  model_onnx.js  sensor.js  signal.js  viz.js
web/js/three/: postprocessing.bundle.js
web/model/: demo_cases.json  rf_model.json
