[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibro"
version = "0.1.0"
description = "AI-powered gearbox fault diagnostics from vibration signals"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["vibration", "diagnostics", "gearbox", "machine-learning", "fft", "random-forest"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "sqlmodel>=0.0.22",
]

[project.optional-dependencies]
advanced = [
    "torch>=2.0",
    "onnx>=1.14",
    "shap>=0.42",
]
dev = [
    "pytest>=7.0",
    "flake8>=6.0",
    "black>=23.0",
    "isort>=5.12",
]

[project.urls]
Homepage = "https://github.com/ssivitskiy/vibro"
Documentation = "https://github.com/ssivitskiy/vibro#readme"
Repository = "https://github.com/ssivitskiy/vibro"
Issues = "https://github.com/ssivitskiy/vibro/issues"

# ═══ Tool Configuration ═══

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["python"]
addopts = "-v --tb=short"

[tool.flake8]
max-line-length = 120
ignore = ["E402", "W503", "E203"]
exclude = ["__pycache__", ".git", "venv", "data"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120
